--- a/Virtual_piano/Virtual_piano2.html
+++ b/Virtual_piano/Virtual_piano2.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="Virtual_piano2.css"> <!-- How to include an external CSS -->
 </head>
 <body>
-    <div class= "container">
-    <kbd>A</kbd>
-    <kbd>S</kbd>
-    <kbd>D</kbd>
-    <kbd>F</kbd>
-    <kbd>G</kbd>
-    <kbd>H</kbd>
-    <kbd>J</kbd>
-    </div>
+    <div class="container">
+        <div class="black-keys">
+            <kbd id="W">W</kbd>
+            <kbd id="E">E</kbd>
+            <kbd id="T">T</kbd>
+            <kbd id="Y">Y</kbd>
+            <kbd id="U">U</kbd>
+        </div>
+
+        <div class="white-keys">
+            <kbd>A</kbd>
+            <kbd>S</kbd>
+            <kbd>D</kbd>
+            <kbd>F</kbd>
+            <kbd>G</kbd>
+            <kbd>H</kbd>
+            <kbd>J</kbd>
+        </div></div>
+
+
     <script src="keyboard.js"></script>
 </body>
 </html>
