--- a/Virtual_piano/Virtual_piano2.html
+++ b/Virtual_piano/Virtual_piano2.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        
         <div class="black-keys">
             <kbd id="W">W</kbd>
             <kbd id="E">E</kbd>
@@ -24,7 +25,8 @@
             <kbd>G</kbd>
             <kbd>H</kbd>
             <kbd>J</kbd>
-        </div></div>
+        </div>
+    </div>
 
 
     <script src="keyboard.js"></script>
